# bit-repo

./: .dockerignore  .gitignore  Dockerfile  db_backup.sh  deploy.py  pyproject.toml  requirements.txt  select_coin_kind.csv  terminal_log.txt
.config/local_dev/: bit.nginx  gunicorn.py  supervisord.conf
app/: cron.py  crontab.py  expected_table.csv  selected_coin.csv  selected_coin_0518.csv  selected_coin_kind.csv  selected_coin_list_test.csv  send_fee_rate.csv  test_api.py  up_bit_selected_test.csv
app/bit_finance/: admin.py  apps.py  models.py  urls.py  views.py
app/bit_finance/migrations/: 0001_initial.py  0002_bitfinanceexchange.py  0003_bitfinanceexchange_full_name.py  0004_auto_20210427_1123.py  0005_auto_20210427_1134.py  0006_auto_20210428_0552.py  0007_auto_20210503_0942.py  0008_bitfinanceexchange_transaction_price.py  0009_delete_bitfinancecoinexchange.py  0010_binanceexchange.py
app/config/: backup_function.py  global_function.py  global_variable.py  urls.py
app/config/settings/: __init__.py  base.py  dev.py
app/config/wsgi/: production.py
app/db_backup/: 202104161124_db_backup.sqlite3
app/log/: binance_log.txt  first_bit_up.txt  second_bit_up.txt  test.txt  third_bit_up.txt
app/search/: models.py  serializers.py  views.py
app/search/migrations/: 0001_initial.py
app/templates/market/: analytics_view.html  binance_buy_exchange.html  error.html  exchange_binance_to_up_max.html  exchange_binance_to_up_multiple.html  exchange_up_to_binance_multiple.html  personal_binance.html  (+3 more)
app/up_bits/: admin.py  apps.py  models.py  urls.py  views.py
(+28 files in other folders)
